--- a/public/style.css
+++ b/public/style.css
@@ -22938,3 +22938,72 @@ header.transparent.stop.header-2 .main-header-wraper {
 .service-main-title{
   color: #00b3ea !important;
 }
+.line-clamp-4 {
+  --lines: 4;
+  display: -webkit-box;            /* for WebKit (Chrome, Safari, Edge) */
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;           /* the clamp (kept explicit for compatibility) */
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+ 
+  /* keep white-space normal so wrapping happens */
+  white-space: normal;
+}
+
+/* .courses-section {
+  background-color: rgb(235, 242, 252);
+} */
+
+.courses-card {
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center !important;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+.courses-card:hover {
+  transform: translateY(-5px);
+}
+
+.courses-text {
+  flex: 1;
+  padding: 5px;
+  font-size: 18px;
+  color: #444;
+  line-height: 1.6;
+}
+
+.courses-author {
+  background-color: #e9e7f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+}
+
+.courses-author img {
+  width: 120px;
+  height: 120px;
+  border-radius: 20%;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.author-name {
+  font-weight: 600;
+  color: #202020;
+  font-size: 19px;
+}
+
+.author-title {
+  font-size: 13px;
+  color: #777;
+}
