--- a/public/style.css
+++ b/public/style.css
@@ -11907,8 +11907,8 @@ header.header-3 .top-header .header-cta ul li a:focus:any-link {
 }
 
 header.header-3 .top-header .header-cta ul li a i {
-  color: #fe0302;
-  font-size: 15px;
+  color: white;
+  font-size: 19px;
 }
 
 header.header-3 .top-header .header-cta ul li a i.icon-phone {
