--- a/public/style.css
+++ b/public/style.css
@@ -23035,3 +23035,21 @@ header.transparent.stop.header-2 .main-header-wraper {
   width: 100%;
   height: 200px;
 }
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  left: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.my-float {
+  margin-top: 16px;
+}
