--- a/public/assets/css/icons.css
+++ b/public/assets/css/icons.css
@@ -1385,10 +1385,15 @@
 .fa-caret-circle-up:before {
     content: "\f331"
 }
+/* .fa-caret-down:before {
+    content: "▼";
+} */
 
-.fa-caret-down:before {
-    content: "▼"
-}
+/* .fa-caret-down:before {
+    content: "▼";
+    font-size: 10px; 
+    margin-left: 5px; 
+} */
 
 .fa-caret-left:before {
     content: "\f0d9"
