--- a/public/style.css
+++ b/public/style.css
@@ -23143,3 +23143,9 @@ header.transparent.stop.header-2 .main-header-wraper {
   width: 100%;
   /* Make sure the image fills the container */
 }
+.about-us-img-ceo img{
+  height: 500px;
+  width: 100%;
+border-radius: 15px;
+object-fit: cover;
+}
